# MinecraftPP

./: .gitignore  .gitmodules  CMakeLists.txt
include/: intrinsics.hpp  types.hpp  util.hpp  vec3.hpp
include/glad/: glad.c  glad.h
include/imgui/: imconfig.h
include/imgui/imgui_impl/: imgui_impl_opengl3.cpp
resources/shaders/: f_block.glsl  v_block.glsl
src/: main.cpp
